--- a/School/pom.xml
+++ b/School/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>School</artifactId>
 	<packaging>war</packaging>
 	<version>1.0.1-SNAPSHOT</version>
-	<name>kms-v1 Maven Webapp</name>
+	<name>School-v1 Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -13,9 +13,7 @@
 		<springsecurity.version>4.0.3.RELEASE</springsecurity.version>
 		<jackson.version>2.6.2</jackson.version>
 		<hibernate.version>4.3.11.Final</hibernate.version>
-
 	</properties>
-
 	<dependencies>
 	<!-- Excel Library -->
 		<dependency>
@@ -38,7 +36,6 @@
 			<artifactId>poi-ooxml-schemas</artifactId>
 			<version>3.15</version>
 		</dependency>
-
 		<!-- Spring Framework -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -95,7 +92,6 @@
 			<artifactId>el-api</artifactId>
 			<version>2.2</version>
 		</dependency>
-
 		<!-- JDBC -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -113,7 +109,6 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.25</version>
 		</dependency>
-
 		<!-- Spring Security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -130,13 +125,11 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>${springsecurity.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>4.0.1.RELEASE</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
@@ -154,21 +147,18 @@
 			<artifactId>validation-api</artifactId>
 			<version>1.1.0.Final</version>
 		</dependency>
-
 		<!-- Joda-Time -->
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.3</version>
 		</dependency>
-
 		<!-- To map JodaTime with database type -->
 		<dependency>
 			<groupId>org.jadira.usertype</groupId>
 			<artifactId>usertype.core</artifactId>
 			<version>3.0.0.CR1</version>
 		</dependency>
-
 		<!-- JSON -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -190,16 +180,13 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-
 		<!-- Common file upload -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-
 		<!-- Logging -->
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
@@ -232,10 +219,6 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.1.3.Final</version>
 		</dependency>
-
-
-
-
 	</dependencies>
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
@@ -244,7 +227,6 @@
 				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
-
 		<testSourceDirectory>src/test/java</testSourceDirectory>
 		<testResources>
 			<testResource>
