--- a/School/pom.xml
+++ b/School/pom.xml
@@ -226,6 +226,16 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<plugins>
+		    <plugin>
+		        <artifactId>maven-compiler-plugin</artifactId>
+		        <version>3.1</version>
+		        <configuration>
+		            <fork>true</fork>
+		            <executable>C:\Program Files\Java\jdk1.8.0_31\bin\javac.exe</executable>
+		        </configuration>
+		    </plugin>
+		</plugins>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<resources>
 			<resource>
