--- a/School/pom.xml
+++ b/School/pom.xml
@@ -151,7 +151,7 @@
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.3</version>
+			<version>2.9.9</version>
 		</dependency>
 		<!-- To map JodaTime with database type -->
 		<dependency>
@@ -159,6 +159,13 @@
 			<artifactId>usertype.core</artifactId>
 			<version>3.0.0.CR1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/joda-time/joda-time-jsptags -->
+		<dependency>
+		    <groupId>joda-time</groupId>
+		    <artifactId>joda-time-jsptags</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		
 		<!-- JSON -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
